--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-redux": "^9.1.2",
     "sharp": "^0.33.5",
     "sonner": "^1.5.0",
+    "sweetalert2": "^11.14.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
