--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/sortable": "^8.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@headlessui/react": "^2.1.8",
     "@hookform/resolvers": "^3.9.0",
     "@radix-ui/react-accordion": "^1.2.0",
     "@radix-ui/react-avatar": "^1.1.0",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.2.0",
     "framer-motion": "^11.5.4",
+    "jodit-react": "^4.1.2",
     "lucide-react": "^0.436.0",
     "next": "14.2.7",
     "react": "^18",
